--- a/src/html/page020.html
+++ b/src/html/page020.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>GO SURVEY</title>
+  <title>GO SURVEY ｜ 專案與活動管理</title>
 
   <!-- Bootstrap 5 與 Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -126,8 +126,8 @@
         <!-- 頭部：標題 + 未讀點 + 時間 -->
         <div class="item-head d-flex justify-content-between align-items-start">
           <h6 class="mb-0 text-deep-blue">專案即將到期</h6>
+          <small class="date-label text-muted me-2">2025/10/13</small>
           <span class="dot-unread" aria-label="未讀"></span>
-          <!-- <small class="text-muted">2 小時前</small> -->
         </div>
 
         <!-- 副標 -->
@@ -151,8 +151,8 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">專案已結案</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
               <span class="dot-unread" aria-label="未讀"></span>
-              <!-- <small class="text-muted">1 小時前</small> -->
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查 Q4 2024</p>
           </div>
@@ -165,6 +165,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">發送異常</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">員工問卷專案  發送出現異常，請通知管理員</p>
           </div>
@@ -177,6 +178,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">發送完成</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查 Q4 2024 發送完成</p>
           </div>
@@ -189,6 +191,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1">連結生成異常</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">員工問卷專案  連結生成出現異常，請通知管理員</p>
           </div>
@@ -201,6 +204,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">連結生成完成</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查Q4 2024  連結生成完成</p>
           </div>
