--- a/src/html/page030.html
+++ b/src/html/page030.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>GO SURVEY</title>
+  <title>GO SURVEYGO SURVEY ｜ 內容與媒體管理</title>
 
   <!-- Bootstrap 5 與 Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -282,7 +282,7 @@
                         <button type="button" class="btn btn-sm btn-secondary">
                           <i class="bi bi-arrow-clockwise"></i>
                         </button>
-                        <button type="button" class="btn btn-red btn-sm js-card-delete" title="刪除">
+                        <button type="button" id="confirmDeleteBtn" class="btn btn-red btn-sm js-card-delete" title="刪除">
                           <i class="bi bi-trash"></i>
                         </button>
                       </div>
@@ -296,7 +296,7 @@
 
           <!-- 模組塊：問卷項目模板（表格） -->
           <div class="module-card module-nobg card border-0 mt-4">
-            <div class="card-body">
+            <div class="card-body px-0">
 
               <div class="d-flex justify-content-between align-items-center mb-3">
                 <h3 class="h5 mb-0 fw-bold text-orange">渠道頁面模板</h3>
@@ -489,8 +489,8 @@
         <!-- 頭部：標題 + 未讀點 + 時間 -->
         <div class="item-head d-flex justify-content-between align-items-start">
           <h6 class="mb-0 text-deep-blue">專案即將到期</h6>
+          <small class="date-label text-muted me-2">2025/10/13</small>
           <span class="dot-unread" aria-label="未讀"></span>
-          <!-- <small class="text-muted">2 小時前</small> -->
         </div>
 
         <!-- 副標 -->
@@ -514,8 +514,8 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">專案已結案</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
               <span class="dot-unread" aria-label="未讀"></span>
-              <!-- <small class="text-muted">1 小時前</small> -->
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查 Q4 2024</p>
           </div>
@@ -528,6 +528,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">發送異常</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">員工問卷專案  發送出現異常，請通知管理員</p>
           </div>
@@ -540,6 +541,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">發送完成</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查 Q4 2024 發送完成</p>
           </div>
@@ -552,6 +554,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1">連結生成異常</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">員工問卷專案  連結生成出現異常，請通知管理員</p>
           </div>
@@ -564,6 +567,7 @@
           <div class="flex-grow-1">
             <div class="item-head d-flex justify-content-between align-items-center">
               <h6 class="mb-1 text-deep-blue">連結生成完成</h6>
+              <small class="date-label text-muted me-2">2025/10/13</small>
             </div>
             <p class="mb-0 text-muted">客戶滿意度調查Q4 2024  連結生成完成</p>
           </div>
